--- a/style.css
+++ b/style.css
@@ -21,7 +21,29 @@
     --ds-color-brand-brown-800: #4e342e;
     --ds-color-brand-brown-900: #3e2723;
 
-    --ds-color-brand-grey-900: #212121;
+    --ds-color-neutral-white: #ffffff;
+    --ds-color-neutral-50: #fafafa;
+    --ds-color-neutral-100: #f5f5f5;
+    --ds-color-neutral-200: #eeeeee;
+    --ds-color-neutral-300: #e0e0e0;
+    --ds-color-neutral-400: #bdbdbd;
+    --ds-color-neutral-500: #9e9e9e;
+    --ds-color-neutral-600: #757575;
+    --ds-color-neutral-700: #616161;
+    --ds-color-neutral-800: #424242;
+    --ds-color-neutral-900: #212121;
+    --ds-color-neutral-black: #000000;
+
+    --ds-color-utility-red-50: #ffebee;
+    --ds-color-utility-red-100: #ffcdd2;
+    --ds-color-utility-red-200: #ef9a9a;
+    --ds-color-utility-red-300: #e57373;
+    --ds-color-utility-red-400: #ef5350;
+    --ds-color-utility-red-500: #f44336;
+    --ds-color-utility-red-600: #e53935;
+    --ds-color-utility-red-700: #d32f2f;
+    --ds-color-utility-red-800: #c62828;
+    --ds-color-utility-red-900: #b71c1c;
 
     --C_WHITE: #ffffff;
     --C_BLACK: #000000;
@@ -38,13 +60,50 @@
     --C_LOGO: var(--C_YELLOW_LIGHT);
     --C_LOGO_BG: var(--C_DARK);
 
-    --ds-theme-color-background-brand: var(--ds-color-brand-brown-50);
-    --ds-theme-color-content-brand: var(--ds-color-brand-grey-900);
-    --ds-theme-color-border-brand: var(--ds-color-brand-grey-900);
+    --ds-theme-color-content-default: var(--ds-color-neutral-900);
+    --ds-theme-color-content-default-hover: var(--ds-color-neutral-600);
+    --ds-theme-color-content-subtle: var(--ds-color-neutral-600);
+    --ds-theme-color-content-knockout: var(--ds-color-neutral-white);
+    --ds-theme-color-content-brand: var(--ds-color-brand-brown-600);
+    --ds-theme-color-content-brand-hover: var(--ds-color-brand-brown-800);
+    --ds-theme-color-content-disabled: var(--ds-color-neutral-500);
 
-    --ds-theme-button-color-background: var(--ds-theme-color-background-brand);
-    --ds-theme-button-color-content: var(--ds-theme-color-content-brand);
-    --ds-theme-button-color-border: var(--ds-theme-color-border-brand);
+    --ds-theme-color-background-default: var(--ds-color-neutral-white);
+    --ds-theme-color-background-subtle: var(--ds-color-neutral-100);
+    --ds-theme-color-background-brand: var(--ds-color-brand-brown-100);
+    --ds-theme-color-background-brand-knockout: var(--ds-color-brand-brown-700);
+    --ds-theme-color-background-knockout: var(--ds-color-neutral-900);
+    --ds-theme-color-background-disabled: var(--ds-color-neutral-200);
+
+    --ds-theme-color-border-default: var(--ds-color-neutral-500);
+    --ds-theme-color-border-brand: var(--ds-color-brand-brown-600);
+    --ds-theme-color-border-knockout: var(--ds-color-neutral-white);
+
+    --ds-theme-button-color-background-default: var(--ds-color-neutral-white);
+    --ds-theme-button-color-background-hover: var(--ds-color-neutral-white);
+    --ds-theme-button-color-background-active: var(--ds-color-neutral-white);
+    --ds-theme-button-color-background-disabled: var(--ds-color-neutral-white);
+    --ds-theme-button-color-content-default: var(--ds-color-neutral-900);
+    --ds-theme-button-color-content-hover: var(--ds-color-neutral-900);
+    --ds-theme-button-color-content-active: var(--ds-color-neutral-900);
+    --ds-theme-button-color-content-disabled: var(--ds-color-neutral-600);
+    --ds-theme-button-color-border-default: var(--ds-color-neutral-900);
+    --ds-theme-button-color-border-hover: var(--ds-color-neutral-900);
+    --ds-theme-button-color-border-active: var(--ds-color-neutral-900);
+    --ds-theme-button-color-border-disabled: var(--ds-color-neutral-900);
+
+    --ds-theme-button-primary-color-background-default: var(--ds-color-neutral-900);
+    --ds-theme-button-primary-color-background-hover: var(--ds-color-neutral-900);
+    --ds-theme-button-primary-color-background-active: var(--ds-color-neutral-900);
+    --ds-theme-button-primary-color-background-disabled: var(--ds-color-neutral-200);
+    --ds-theme-button-primary-color-content-default: var(--ds-color-neutral-white);
+    --ds-theme-button-primary-color-content-hover: var(--ds-color-neutral-white);
+    --ds-theme-button-primary-color-content-active: var(--ds-color-neutral-white);
+    --ds-theme-button-primary-color-content-disabled: var(--ds-color-neutral-white);
+    --ds-theme-button-primary-color-border-default: var(--ds-color-neutral-900);
+    --ds-theme-button-primary-color-border-hover: var(--ds-color-neutral-900);
+    --ds-theme-button-primary-color-border-active: var(--ds-color-neutral-900);
+    --ds-theme-button-primary-color-border-disabled: var(--ds-color-neutral-200);
 
     --C_TEXT: #333333;
     --C_HEADER: #111111;
@@ -56,11 +115,24 @@
     --C_BUTTON_FILL_BG: var(--C_DARK);
 }
 
-.button-default {
-    background-color: var(--ds-theme-button-color-background);
-    color: var(--ds-theme-button-color-content);
-    border: 1px solid var(--ds-theme-button-color-border);
+.ds-c-button {
+    display: inline-block;
+    text-decoration: none;
+    padding: 1.2rem 2.4rem;
+    background-color: var(--ds-theme-button-color-background-default);
+    color: var(--ds-theme-button-color-content-default);
+    border: 1px solid var(--ds-theme-button-color-border-default);
 }
+
+.ds-c-button-primary {
+    display: inline-block;
+    text-decoration: none;
+    padding: 1.2rem 2.4rem;
+    background-color: var(--ds-theme-button-primary-color-background-default);
+    color: var(--ds-theme-button-primary-color-content-default);
+    border: 1px solid var(--ds-theme-button-primary-color-border-default);
+}
+
 
 @font-face {
     font-family: lora-regular;
@@ -88,9 +160,9 @@ html {
 
 body {
     font-size: 1.8rem;
-    color: var(--ds-theme-color-content-brand);
+    color: var(--ds-theme-color-content-default);
     font-family: lora-regular, serif;
-    background-color: var(--ds-theme-color-background-brand);
+    background-color: var(--ds-theme-color-background-default);
 }
 
 .container-xl {
