--- a/style.css
+++ b/style.css
@@ -951,6 +951,12 @@ footer {
     .grid-3 {
         grid-template-columns: 1fr;
     }
+    .grid-4 {
+        grid-template-columns: 1fr;
+    }
+    .grid-5 {
+        grid-template-columns: 1fr;
+    }
 }
 
 
