--- a/style.css
+++ b/style.css
@@ -200,6 +200,12 @@ footer span {
     margin-bottom: 2.4rem;
 }
 
+.article h4 {
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    margin-bottom: 2.4rem;
+}
+
 .article p {
     margin-bottom: 1.6rem;
 }
@@ -219,6 +225,50 @@ footer span {
 }
 
 .article li {
+}
+
+.article-markdown {
+}
+
+.article-markdown h1 {
+    font-size: 6.4rem;
+    line-height: 1;
+    margin-top: 6.4rem;
+    margin-bottom: 1.6rem;
+}
+
+.article-markdown h2 {
+    font-size: 4.8rem;
+    line-height: 5.4rem;
+    margin-top: 6.4rem;
+    margin-bottom: 1.6rem;
+}
+
+.article-markdown h3 {
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+    margin-top: 4.8rem;
+    margin-bottom: 1.6rem;
+}
+
+.article-markdown h4 {
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    margin-bottom: 1.6rem;
+}
+
+.article-markdown p {
+    margin-bottom: 1.6rem;
+}
+
+.article-markdown ul {
+    margin-left: 3.2rem;
+    margin-bottom: 1.6rem;
+}
+
+.article-markdown ol {
+    margin-left: 3.2rem;
+    margin-bottom: 1.6rem;
 }
 
 /*********************************************/
